Second Commit: CSS and SCSS Added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title>The Hipster Alphabet</title>
-    <link type="text/css" rel="stylesheet" href="normalize.css">
+    <link type="text/css" rel="stylesheet" href="assets/stylesheet/normalize.css">
+    <link type="text/css" rel="stylesheet" href="assets/stylesheet/hipster.css">
 
   </head>
   <body>
-    <header></header> //use partial _header file here//
+      <header><ul>
+       <li><a href="#A">Aa</a></li>
+       <li><a href="#B">Bb</a></li>
+       <li><a href="#C">Cc</a></li>
+       <li><a href="#D">Dd</a></li>
+       <li><a href="#E">Ee</a></li>
+       <li><a href="#F">Ff</a></li>
+       <li><a href="#G">Gg</a></li>
+       <li><a href="#H">Hh</a></li>
+       <li><a href="#I">Ii</a></li>
+       <li><a href="#J">Jj</a></li>
+       <li><a href="#K">Kk</a></li>
+       <li><a href="#L">Ll</a></li>
+       <li><a href="#M">Mm</a></li>
+       <li><a href="#N">Nn</a></li>
+       <li><a href="#O">Oo</a></li>
+       <li><a href="#P">Pp</a></li>
+       <li><a href="#Q">Qq</a></li>
+       <li><a href="#R">Rr</a></li>
+       <li><a href="#S">Ss</a></li>
+       <li><a href="#T">Tt</a></li>
+       <li><a href="#U">Uu</a></li>
+       <li><a href="#V">Vv</a></li>
+       <li><a href="#W">Ww</a></li>
+       <li><a href="#X">Xx</a></li>
+       <li><a href="#Y">Yy</a></li>
+       <li><a href="#Z">Zz</a></li>
+     </ul>
+      </header>
     <div class="line1">
       <section class="robinblue" id="A">
         <img src="assets/images/aviator.png" class="main-image">
@@ -56,7 +85,7 @@
         </div>
         <p>Water dressed in black. Very bitter & expensive, but Europeans drink it & they're always ahead of the curve.</p>
       </section>
-      <section class="green" id="F">
+      <section class="mint" id="F">
         <img src="assets/images/bike.png" class="main-image">
         <h2>Fe</h2>
         <div class="line-icon">
@@ -65,7 +94,7 @@
         </div>
         <p>Because swtiching gears and going up hills easier is just fucking stupid and severely uncool.</p>
       </section>
-      <section class="blue" id="G">
+      <section class="robinblue" id="G">
         <img src="assets/images/graphic.png" class="main-image">
         <h2>Fe</h2>
         <div class="line-icon">
@@ -112,7 +141,7 @@
         </div>
         <p>A rancid concoction made up of putrid organisms that will keep you regular for months.</p>
       </section>
-      <section class="green" id="L">
+      <section class="mint" id="L">
         <img src="assets/images/lettering.png" class="main-image">
         <h2>Ll</h2>
         <div class="line-icon">
@@ -151,11 +180,11 @@
         <p>An extractive, expoitative food product grown chemically free, except some chemicals.</p>
       </section>
       <section class="beige" id="P">
-        <img src="assets/images/polaroid.png" class="main-image">
+        <img src="assets/images/poloroid.png" class="main-image">
         <h2>Pp</h2>
         <div class="line-icon">
           <h1>POLAROID</h1>
-          <img src="assets/images/polaroid-icon.png">
+          <img src="assets/images/poloroid-icon.png">
         </div>
         <p>"Because my phone's camera is too high quality and Instagram is too instant."</p>
       </section>
@@ -179,7 +208,7 @@
           </div>
           <p>"Older is always better. That's why I like to shop at IKEA and Urban Outfitters."</p>
       </section>
-      <section class="robins" id="S">
+      <section class="robinblue" id="S">
           <img src="assets/images/scarf.png" class="main-image">
           <h2>Ss</h2>
           <div class="line-icon">
@@ -198,7 +227,7 @@
           <p>An antique. It's a very heavy laptop that doesn't even have a calculator on it...</p>
       </section>
     </div>
-    <div class="line 6">
+    <div class="line6">
       <section class="red" id="U">
           <img src="assets/images/upcycle.png" class="main-image">
           <h2>Uu</h2>
@@ -237,7 +266,7 @@
       </section>
     </div>
     <div class="line7">
-      <section class="robins" id="Y">
+      <section class="robinblue" id="Y">
           <img src="assets/images/yoga.png" class="main-image">
           <h2>Yy</h2>
           <div class="line-icon">
@@ -255,12 +284,15 @@
           </div>
           <p>In no way does this site capture the zeitgeist of 2014. Z was a hard letter, you guys.</p>
       </section>
+      <section>
+        <div class="logo">
+          <img src="assets/images/hipsterlogo.png">
+        </div>
+      </section>
     </div>
-    <section>
-      <div class="logo">
-    <section>
+    <footer>
+      <p>The Hipster Alphabet is a self-driven project to help Michael Mahaffey better understand html & css. Bugs will be a plenty. Deal widdit.</p>
+    </footer>
 
-    <footer></footer>
-
-    </body>
+  </body>
 </html>
